fix header shift on about page

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,9 @@ header {
   padding: 10px 0;
   box-shadow: 0px 6px 13px 0px rgba(50, 50, 50, 0.5);
   position: fixed;
-  width: 100%
+  width: 100%;
+  top: 0;
+  left: 0;
 }
 .logo {
   max-width: 250px;
